list of indicator ids available at area ids

--- a/phe_fingertips.ipynb
+++ b/phe_fingertips.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "description = pd.read_excel('phe_fingertips_description.ods', 'AreaTypeIDs')"
+    "available_indicator_at_area = pd.read_json('https://fingertips.phe.org.uk/api/available_data')\n",
+    "\n",
+    "print(available_indicator_at_area['AreaTypeId'].unique()\n",
+    "    #   ,\n",
+    "    #   available_indicator_at_area['IndicatorId'].unique()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['IndicatorId', 'AreaTypeId'], dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "available_indicator_at_area.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area_ref = pd.read_json('https://fingertips.phe.org.uk/api/area_types')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Id', 'Name', 'Short', 'Class', 'Sequence', 'CanBeDisplayedOnMap'], dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area_ref.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "available_indicator_at_area = pd.merge(left=available_indicator_at_area, right=area_ref,\n",
+    "         how='left', left_on='AreaTypeId', right_on='Id',\n",
+    "         indicator=True)"
    ]
   },
   {
@@ -36,128 +101,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_7080\\2431134226.py:3: DtypeWarning: Columns (9,10,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  try_df = pd.read_csv(try_url)\n"
-     ]
-    }
-   ],
-   "source": [
-    "try_url = 'https://fingertips.phe.org.uk/api/all_data/csv/by_indicator_id?indicator_ids=200%2C212%2C219%2C224%2C241'\n",
-    "\n",
-    "try_df = pd.read_csv(try_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "Index(['Indicator ID', 'Indicator Name', 'Parent Code', 'Parent Name',\n",
-       "       'Area Code', 'Area Name', 'Area Type', 'Sex', 'Age', 'Category Type',\n",
-       "       'Category', 'Time period', 'Value', 'Lower CI 95.0 limit',\n",
-       "       'Upper CI 95.0 limit', 'Lower CI 99.8 limit', 'Upper CI 99.8 limit',\n",
-       "       'Count', 'Denominator', 'Value note', 'Recent Trend',\n",
-       "       'Compared to England value or percentiles', 'Column not used',\n",
-       "       'Time period Sortable', 'New data', 'Compared to goal',\n",
-       "       'Time period range'],\n",
-       "      dtype='object')"
+       "['both']\n",
+       "Categories (3, object): ['left_only', 'right_only', 'both']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "try_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['England', 'GPs', 'Constituencies', 'CCG',\n",
-       "       'NHS region - local office', 'NHS region',\n",
-       "       'NHS regions - obsolete with ICB introduction',\n",
-       "       'NHS regions - new due to ICB changes', 'STP',\n",
-       "       'Local Maternity System', 'ICB sub-locations', 'ICBs',\n",
-       "       'PCNs (v. 28/10/22)', 'UA', 'County', 'Region', 'PHE Centre',\n",
-       "       'Combined authorities', 'District', 'ONS 2011 group',\n",
-       "       'ONS 2011 subgroup', 'Strategic Clinical Network',\n",
-       "       'ONS 2001 cluster group', 'ONS 2001 cluster subgroup', 'LSOA'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "try_df['Area Type'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['MSOA', 'LSOA', 'Region', 'GPs', 'Electoral Wards', 'Merged Wards',\n",
-       "       'Constituencies', 'Acute Trust', 'England', 'Mental Health Trust',\n",
-       "       'Ambulance Trust', 'PHE Region ',\n",
-       "       'NHS regions - obsolete with ICB introduction', 'NHS region',\n",
-       "       'NHS regions - new due to ICB changes',\n",
-       "       'NHS region - local office', 'PHE Centre 2013-2015',\n",
-       "       'PHE Centre from 2015', 'PHE Centre from 2013', 'CCG new 2018',\n",
-       "       'CCGs old 2018', 'CCGs unchanged 2021', 'CCGs new 2019',\n",
-       "       'CCGs old 2019', 'CCGs new 2020', 'CCGs old 2020', 'CCGs new 2021',\n",
-       "       'CCGs old 2021', 'CCGs new 2018 old 2021', 'ICB sub-locations',\n",
-       "       'Districts & UAs (pre Apr 2019)', 'Counties & UAs (pre Apr 2019)',\n",
-       "       'PHE Centres (2013)', 'PHE Centres (2015)',\n",
-       "       'ONS 2001 cluster supergroup', 'ONS 2001 cluster group',\n",
-       "       'ONS 2001 cluster subgroup', 'Strategic Clinical Network',\n",
-       "       'ONS 2011 group (superseded)', 'ONS 2011 subgroup (superseded)',\n",
-       "       'MH and Acute Trust', 'Acute Trusts', 'STP (unchanged)',\n",
-       "       'AAA Screening Cohort', 'Bowel Cancer Screening Centres',\n",
-       "       'Newborn Screening Sites', 'Maternity Services',\n",
-       "       'Combined authorities', 'Laboratory', 'Breast Screening Service',\n",
-       "       'CCGs (2017/18)', 'CCGs (2018/19)', 'ONS 2011 group',\n",
-       "       'ONS 2011 subgroup', 'Trust type', 'UK', 'LA unchanged',\n",
-       "       'LA new 2019', 'LA obsolete 2019', 'LA obsolete 2020',\n",
-       "       'LA obsolete 2021', 'CCGs (2019/20)', 'CCGs (2020/21)',\n",
-       "       'CCGs (from Apr 2021)', 'UA unchanged', 'UA new 2019',\n",
-       "       'UA obsolete 2019', 'UA new 2020', 'UA new 2021',\n",
-       "       'County unchanged', 'County obsolete 2019', 'County obsolete 2020',\n",
-       "       'County obsolete 2021', 'Districts & UAs (2019/20)',\n",
-       "       'Counties & UAs (2019/20)', 'IAPT services', 'PCNs (v. 28/10/22)',\n",
-       "       'Local Maternity System', 'STP (new 4/20)', 'STP (obsolete)',\n",
-       "       'STPs (pre Apr 2020)', 'STPs (from Apr 2020)', 'ICBs',\n",
-       "       'NHS regions (pre ICB)', 'NHS regions (since ICB setup)',\n",
-       "       'Districts & UAs (2020/21)', 'Counties & UAs (2020/21)',\n",
-       "       'Districts & UAs (from Apr 2021)',\n",
-       "       'Counties & UAs (from Apr 2021)'], dtype=object)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame.from_dict(metadata_areas, orient='index')['Short'].unique()"
+    "available_indicator_at_area['_merge'].unique()"
    ]
   },
   {
@@ -166,12 +122,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_areas = ftp.metadata.get_all_areas(is_test=False)\n",
+    "# metadata_areas = ftp.metadata.get_all_areas(is_test=False)\n",
     "# metadata_value_notes = ftp.metadata.get_all_value_notes(is_test=False)\n",
     "# metadata_profiles = ftp.metadata.get_all_profiles(is_test=False)\n",
     "# metadata_domains = ftp.metadata.get_domains_in_profile(18)\n",
     "metadata_all_indicators = ftp.metadata.get_metadata_for_all_indicators_from_csv(is_test=False)\n",
     "metadata_all_indicator_ids = metadata_all_indicators['Indicator ID'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_all = pd.read_csv('https://fingertips.phe.org.uk/api/indicator_metadata/all?include_definition=yes&include_system_content=yes')"
    ]
   },
   {
