indicator area combos for indicators with 3 maps

--- a/phe_fingertips.ipynb
+++ b/phe_fingertips.ipynb
@@ -293,66 +293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_first_hierarchy(data, map_position):\n",
-    "    data = data[data['map_position']==map_position]\n",
+    "    data = data[data['map_position']==map_position].loc[:, ['IndicatorId','hierarchy','AreaTypeId', 'map_position']]\n",
     "    data['rank'] = data.groupby('IndicatorId')['hierarchy'].rank(method='dense')\n",
-    "    return data[data['rank']==1]"
+    "    return data[data['rank']==1].drop('rank', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1581"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "full_area_indicator_hierarchy['IndicatorId'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_14844\\2689586699.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['rank'] = data.groupby('IndicatorId')['hierarchy'].rank(method='dense')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1090"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "find_first_hierarchy(full_area_indicator_hierarchy, 'right')['IndicatorId'].nunique()"
+    "get_indicator_area = pd.concat([find_first_hierarchy(full_area_indicator_hierarchy, 'left'),\n",
+    "                                find_first_hierarchy(full_area_indicator_hierarchy, 'middle'),\n",
+    "                                find_first_hierarchy(full_area_indicator_hierarchy, 'right')]\n",
+    ")"
    ]
   },
   {
@@ -361,6 +321,174 @@
    "metadata": {},
    "source": [
     "# Retrieve indicator data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## filter by those that only have all 3 as a test case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_maps_returned = get_indicator_area.groupby('IndicatorId')['map_position'].count()\n",
+    "ind_ids_keep_3_maps = number_of_maps_returned[number_of_maps_returned==3].index.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_ind_area_combos = get_indicator_area[get_indicator_area['IndicatorId'].isin(ind_ids_keep_3_maps)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IndicatorId</th>\n",
+       "      <th>hierarchy</th>\n",
+       "      <th>AreaTypeId</th>\n",
+       "      <th>map_position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>left</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>212</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>left</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>219</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>left</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>241</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>left</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>247</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>left</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6096</th>\n",
+       "      <td>92263</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6097</th>\n",
+       "      <td>92264</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6100</th>\n",
+       "      <td>92272</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6167</th>\n",
+       "      <td>92866</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6168</th>\n",
+       "      <td>92867</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>right</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>411 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      IndicatorId  hierarchy  AreaTypeId map_position\n",
+       "1             200        1.0         221         left\n",
+       "2             212        1.0         221         left\n",
+       "3             219        1.0         221         left\n",
+       "5             241        1.0         221         left\n",
+       "6             247        1.0         221         left\n",
+       "...           ...        ...         ...          ...\n",
+       "6096        92263        8.0         102        right\n",
+       "6097        92264        8.0         102        right\n",
+       "6100        92272        8.0         102        right\n",
+       "6167        92866        8.0         102        right\n",
+       "6168        92867        8.0         102        right\n",
+       "\n",
+       "[411 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ind_area_combos"
    ]
   },
   {
