include get data for a list of indicators and area

--- a/phe_fingertips.ipynb
+++ b/phe_fingertips.ipynb
@@ -492,36 +492,250 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # metadata_areas = ftp.metadata.get_all_areas(is_test=False)\n",
-    "# # metadata_value_notes = ftp.metadata.get_all_value_notes(is_test=False)\n",
-    "# # metadata_profiles = ftp.metadata.get_all_profiles(is_test=False)\n",
-    "# # metadata_domains = ftp.metadata.get_domains_in_profile(18)\n",
-    "# metadata_all_indicators = ftp.metadata.get_metadata_for_all_indicators_from_csv(is_test=False)\n",
-    "# metadata_all_indicator_ids = metadata_all_indicators['Indicator ID'].tolist()"
+    "## get data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([221, 220, 219,   6,  66, 167, 166, 165, 154, 401, 402, 302, 202,\n",
+       "       102], dtype=int64)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# metadata_all = pd.read_csv('https://fingertips.phe.org.uk/api/indicator_metadata/all?include_definition=yes&include_system_content=yes')"
+    "get_ind_area_combos['AreaTypeId'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IndicatorId</th>\n",
+       "      <th>hierarchy</th>\n",
+       "      <th>map_position</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AreaTypeId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>45</td>\n",
+       "      <td>45</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>61</td>\n",
+       "      <td>61</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            IndicatorId  hierarchy  map_position\n",
+       "AreaTypeId                                      \n",
+       "6                    45         45            45\n",
+       "66                   34         34            34\n",
+       "102                  12         12            12\n",
+       "154                  15         15            15\n",
+       "165                  13         13            13\n",
+       "166                  14         14            14\n",
+       "167                  61         61            61\n",
+       "202                   6          6             6\n",
+       "219                  19         19            19\n",
+       "220                  36         36            36\n",
+       "221                  37         37            37\n",
+       "302                  13         13            13\n",
+       "401                  72         72            72\n",
+       "402                  34         34            34"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_ind_area_combos.groupby('AreaTypeId').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replace_comma = '%2C'\n",
-    "# ids_as_str = replace_comma.join([str(i) for i in metadata_all_indicator_ids])"
+    "def return_ind_list_for_area_type(data, AreaTypeId):\n",
+    "    return data[data['AreaTypeId']==AreaTypeId]['IndicatorId'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  200,   212,   219,   241,   247,   253,   258,   273,   848,\n",
+       "       20601, 20602, 90316, 90317, 90319, 90320, 90321, 90323, 90443,\n",
+       "       90581, 90646, 90933, 91215, 91216, 91269, 91280, 91547, 92443,\n",
+       "       92445, 92464, 92465, 92534, 92538, 92588, 93194, 93195, 93382,\n",
+       "       93553], dtype=int64)"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_ind_list_for_area_type(get_ind_area_combos, 221)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data(data, area_type_id):\n",
+    "    indicator_list = return_ind_list_for_area_type(data, area_type_id)\n",
+    "    \n",
+    "    replace_comma = '%2C'\n",
+    "    ids_as_str = replace_comma.join([str(i) for i in indicator_list])\n",
+    "    ids_as_str\n",
+    "    data = ftp.retrieve_data.get_data_by_indicator_ids(indicator_ids=ids_as_str, # [Maximum 100]\n",
+    "                                                    area_type_id=area_type_id,\n",
+    "                                                    # parent_area_type_id=15,\n",
+    "                                                    # profile_id=None,\n",
+    "                                                    include_sortable_time_periods=True,\n",
+    "                                                    is_test=False)\n",
+    "    data.to_csv(str(area_type_id)+'.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for area_id in get_ind_area_combos['AreaTypeId'].unique():\n",
+    "    get_data(get_ind_area_combos, area_id)"
    ]
   },
   {
@@ -543,25 +757,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ids_as_str"
+    "# # metadata_areas = ftp.metadata.get_all_areas(is_test=False)\n",
+    "# # metadata_value_notes = ftp.metadata.get_all_value_notes(is_test=False)\n",
+    "# # metadata_profiles = ftp.metadata.get_all_profiles(is_test=False)\n",
+    "# # metadata_domains = ftp.metadata.get_domains_in_profile(18)\n",
+    "# metadata_all_indicators = ftp.metadata.get_metadata_for_all_indicators_from_csv(is_test=False)\n",
+    "# metadata_all_indicator_ids = metadata_all_indicators['Indicator ID'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data = ftp.retrieve_data.get_data_by_indicator_ids(indicator_ids=ids_as_str, # [Maximum 100]\n",
-    "#                                                    area_type_id=7,\n",
-    "#                                                    parent_area_type_id=15,\n",
-    "#                                                    profile_id=None,\n",
-    "#                                                    include_sortable_time_periods=None,\n",
-    "#                                                    is_test=False)"
+    "# metadata_all = pd.read_csv('https://fingertips.phe.org.uk/api/indicator_metadata/all?include_definition=yes&include_system_content=yes')"
    ]
   },
   {
